@@ -53,6 +53,9 @@ New features
 	  the main usage of the script is for starting things on localhost.  Eventually
 	  when ipcluster is able to start things on other hosts, we will put security
 	  back.
+	* 'cd --foo' searches directory history for string foo, and jumps to that dir.
+	  Last part of dir name is checked first. If no matches for that are found,
+	  look at the whole path.
 
 Bug fixes
 ---------
@@ -64,6 +67,8 @@ Bug fixes
 	* A few subpackages has missing `__init__.py` files.
 	* The documentation is only created is Sphinx is found.  Previously, the `setup.py`
 	  script would fail if it was missing.
+	* Greedy 'cd' completion has been disabled again (it was enabled in 0.8.4)
+          
 
 Backwards incompatible changes
 ------------------------------
